2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_cmp): Avoid comparing devices, pipes
	and so on.

2012-05-03  Matthew Garrett  <mjg@redhat.com>
2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Suspend broadcom cards in order to stop their DMA.

	* grub-core/Makefile.am (KERNEL_HEADER_FILES): Add pci.h on x86 EFI.
	* grub-core/Makefile.core.def (kernel): Add pci.c on x86 EFI.
	(pci): Don't build on x86 EFI.
	* grub-core/bus/pci.c (grub_pci_find_capability): New function.
	* grub-core/kern/efi/mm.c (stop_broadcom) [__i386__ || __x86_64__]:
	New function.
	(grub_efi_finish_boot_services) [__i386__ || __x86_64__]: Call
	stop_broadcom if running on EFI.
	* include/grub/pci.h (GRUB_PCI_CLASS_NETWORK): New enum value.
	(GRUB_PCI_CAP_POWER_MANAGEMENT): Likewise.
	(GRUB_PCI_VENDOR_BROADCOM): Likewise.
	(grub_pci_find_capability): New proto.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi: Remove dot from the extension as it apparently
	doesn't work with some makeinfo versions.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* po/Makefile.in.in: Make msgfmt output in little-endian in accordance
	with GRUB expectance.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_cmp): Compare directories recursively.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/reiserfs.c (grub_reiserfs_iterate_dir): Put a trailing
	zero after directory block since last entry may be not 0-terminated if
	it ends on block boundary. Use continue instead of if spanning whole
	loop.

2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>

	Support 4K sectors UDF inline files.

	* grub-core/fs/udf.c (grub_udf_file_entry): Don't specify padding size.
	(grub_udf_extended_file_entry): Likewise.
	(grub_fshelp_node): Name the anonymous union. Put block at the end.
	All users updated.
	(get_fshelp_size): New function.
	(grub_udf_read_icb): Read whole block.