@@ -1,5 +1,13 @@
 2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	Fix B-tree search in BFS, especially in presence of non-ASCII
+	characters.
+
+	* grub-core/fs/bfs.c (bfs_strcmp): New function.
+	(find_in_b_tree): Use standard bsearch + btree algorithm.
+
+2012-05-03  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/grub-fstest.c (cmd_cmp): Avoid comparing devices, pipes
 	and so on.
 
